--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,8 +1,8 @@
 <% layout("/layouts/boilerplate") %>
-    <div class="row mt-3">
-        <div class="alert alert-danger col-6 offset-3" role="alert">
-            <p>
-                <%= message %>
-                    <p>
-        </div>
-    </div>
+<div class="row mt-3">
+  <div class="alert alert-danger col-6 offset-3" role="alert">
+    <p><%= message %></p>
+
+    <p></p>
+  </div>
+</div>
