--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,93 +1,112 @@
 <% layout("/layouts/boilerplate") %>
 
-    <body>
-        <div class="row">
-            <div class="col-8 offset-2">
-                <h2 style="margin-top: 1rem;margin-bottom: 1rem;">Edit your listing</h2>
+<body>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <h2 style="margin-top: 1rem; margin-bottom: 1rem">Edit your listing</h2>
 
-                <form method="POST" action="/listings/<%= listing.id%>?_method=PUT" novalidate class="needs-validation">
-                    <div class="mb-3">
-                        <label for="title" class="form-lable">Title</label>
-                        <input type="text" name="listing[title]" placeholder="enter title" class="form-control"
-                            value="<%=listing.title %>" required />
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please choose a title
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="description" class="form-lable">Description</label>
-                        <textarea name="listing[description]" placeholder="enter description" class="form-control"
-                            required><%=listing.description %> </textarea>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please choose a description
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="image-filename" class="form-lable">Image file name</label>
-                        <input type="text" name="listing[image][filename]" placeholder="enter image file name"
-                            class="form-control" value="<%=listing.image.filename %>" />
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="image-url" class="form-lable">Image url</label>
-                        <input type="text" name="listing[image][url]" placeholder="enter image url" class="form-control"
-                            value="<%=listing.image.url %>" required />
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please choose a image name
-                        </div>
-
-                    </div>
-                    <div class="row">
-                        <div class="mb-3 col-md-4">
-                            <label for="price" class="form-lable">Price</label>
-                            <input type="number" name="listing[price]" placeholder="enter price" class="form-control"
-                                value="<%=listing.price %>" required />
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                            <div class="invalid-feedback">
-                                Please choose a image url
-                            </div>
-                        </div>
-
-                        <div class="mb-3 col-md-8">
-                            <label for="country" class="form-lable">Country</label>
-                            <input type="text" name="listing[country]" placeholder="enter country" class="form-control"
-                                value="<%=listing.country %>" required />
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                            <div class="invalid-feedback">
-                                Country name should be valid
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                    <div class="mb-3">
-                        <label for="location" class="form-lable">Location</label>
-                        <input type="text" name="listing[location]" placeholder="Like New Dehli , Jaipur, Rajasthan"
-                            class="form-control" value="<%=listing.location %>" required />
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please choose a location
-                        </div>
-                    </div>
-                    <button class="btn btn-dark edit-btn">Edit</button>
-                    <br><br>
-                </form>
-            </div>
+      <form
+        method="POST"
+        action="/listings/<%= listing.id%>?_method=PUT"
+        novalidate
+        class="needs-validation"
+      >
+        <div class="mb-3">
+          <label for="title" class="form-lable">Title</label>
+          <input
+            type="text"
+            name="listing[title]"
+            placeholder="enter title"
+            class="form-control"
+            value="<%=listing.title %>"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Please choose a title</div>
         </div>
-    </body>
+        <div class="mb-3">
+          <label for="description" class="form-lable">Description</label>
+          <textarea
+            name="listing[description]"
+            placeholder="enter description"
+            class="form-control"
+            required
+          >
+<%=listing.description %> </textarea
+          >
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Please choose a description</div>
+        </div>
+        <div class="mb-3">
+          <label for="image-filename" class="form-lable">Image file name</label>
+          <input
+            type="text"
+            name="listing[image][filename]"
+            placeholder="enter image file name"
+            class="form-control"
+            value="<%=listing.image.filename %>"
+          />
+        </div>
+
+        <div class="mb-3">
+          <label for="image-url" class="form-lable">Image url</label>
+          <input
+            type="text"
+            name="listing[image][url]"
+            placeholder="enter image url"
+            class="form-control"
+            value="<%=listing.image.url %>"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Please choose a image name</div>
+        </div>
+        <div class="row">
+          <div class="mb-3 col-md-4">
+            <label for="price" class="form-lable">Price</label>
+            <input
+              type="number"
+              name="listing[price]"
+              placeholder="enter price"
+              class="form-control"
+              value="<%=listing.price %>"
+              required
+            />
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please choose a image url</div>
+          </div>
+
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-lable">Country</label>
+            <input
+              type="text"
+              name="listing[country]"
+              placeholder="enter country"
+              class="form-control"
+              value="<%=listing.country %>"
+              required
+            />
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Country name should be valid</div>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="location" class="form-lable">Location</label>
+          <input
+            type="text"
+            name="listing[location]"
+            placeholder="Like New Dehli , Jaipur, Rajasthan"
+            class="form-control"
+            value="<%=listing.location %>"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Please choose a location</div>
+        </div>
+        <button class="btn btn-dark edit-btn">Edit</button>
+        <br /><br />
+      </form>
+    </div>
+  </div>
+</body>
