--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,26 +1,28 @@
 <% layout("/layouts/boilerplate") %>
 
-    <body>
-
-        <h2 style="margin-top:1rem;margin-bottom:1rem;">All Listings</h2>
-        <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 row-cols-1">
-            <% for(let listing of allListings) { %>
-                <a href="/listings/<%= listing.id %>" class="listing-link">
-                    <div class="card col listing-card">
-                        <img src="<%= listing.image.url %>" class="card-img-top" alt="listing-image"
-                            style="height: 20rem;">
-                        <div class="card-img-overlay"></div>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <b>
-                                    <%= listing.title %>
-                                </b> <br>
-                                &#8377;<%= listing.price.toLocaleString("en-IN") %> /night
-                            </p>
-                        </div>
-                    </div>
-                </a>
-
-                <% } %>
+<body>
+ 
+  <h2 style="margin-top: 1rem; margin-bottom: 1rem">All Listings</h2>
+  <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 row-cols-1">
+    <% for(let listing of allListings) { %>
+    <a href="/listings/<%= listing.id %>" class="listing-link">
+      <div class="card col listing-card">
+        <img
+          src="<%= listing.image.url %>"
+          class="card-img-top"
+          alt="listing-image"
+          style="height: 20rem"
+        />
+        <div class="card-img-overlay"></div>
+        <div class="card-body">
+          <p class="card-text">
+            <b> <%= listing.title %> </b> <br />
+            &#8377;<%= listing.price.toLocaleString("en-IN") %> /night
+          </p>
         </div>
-    </body>
+      </div>
+    </a>
+
+    <% } %>
+  </div>
+</body>
