--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,78 +1,94 @@
 <% layout("/layouts/boilerplate") %>
 
-    <body>
+<body>
+  <div class="row mt-3">
+    <div class="col-8 offset-3 mb-2">
+      <h3><%=listing.title %></h3>
+    </div>
+    <div class="card col-6 offset-3 show-card">
+      <img
+        src="<%= listing.image.url %>"
+        class="card-img-top show-img"
+        alt="lisitng image"
+      />
+      <div class="card-body mb-2">
+        <p class="card-text">
+          <%= listing.description%> <br />
+          &#8377;<%= listing.price.toLocaleString("en-IN") %> <br />
+          <%= listing.location%> <br />
+          <%= listing.country%> <br />
+        </p>
+      </div>
+    </div>
+    <div class="btns">
+      <a
+        href="/listings/<%= listing.id %>/edit"
+        class="btn btn-dark col-1 offset-3 edit-btn"
+        >Edit</a
+      >
 
-        <div class="row mt-3">
-            <div class="col-8 offset-3 mb-2">
-                <h3>
-                    <%=listing.title %>
-                </h3>
-            </div>
-            <div class="card col-6 offset-3 show-card">
-                <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="lisitng image">
-                <div class="card-body mb-2">
-                    <p class="card-text">
-                        <%= listing.description%> <br>
-                            &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
-                                <%= listing.location%> <br>
-                                    <%= listing.country%> <br>
-                    </p>
-                </div>
-            </div>
-            <div class="btns">
-                <a href="/listings/<%= listing.id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-
-                <form action="/listings/<%= listing.id %>?_method=DELETE" method="POST">
-                    <button class="btn btn-dark offset-4">Delete</button>
-                </form>
-            </div>
-            <div class="col-8 offset-3 mb-3">
-                <hr>
-                <h4>Leave a review</h4>
-                <form method="POST" action="/listings/<%= listing.id %>/reviews" novalidate class="needs-validation">
-                    <div class="mb-3 mt=3">
-                        <lable for="Rating" class="form-lable">Rating</lable>
-                        <input type="range" class="form-range" min="1" max="5" id="rating" name="review[rating]">
-                    </div>
-                    <div class="mb-3 mt=3">
-                        <lable for="comment" class="form-lable">Comments</lable>
-                        <textarea name="review[comment]" class="form-control" id="comment" cols="30" rows="5"
-                            required></textarea>
-                        <div class="invalid-feedback">Please add some comment for review</div>
-                    </div>
-                    <button class="btn btn-outline-dark">Submit</button>
-                </form>
-            </div>
-
-            <div class="col-8 offset-3 mb-3">
-                <hr>
-                <p>All Reviews</p>
-                <div class="row">
-                    <% for ( review of listing.reviews) { %>
-                        <div class="card col-5 ms-3 mb-3">
-                            <div class="card-body">
-                                <h5>ms</h5>
-                                <p class="card-text">
-                                    <%=review.comment %>
-                                </p>
-                                <p class="card-text">
-                                    <%=review.rating%> starts
-                                </p>
-
-                            </div>
-                            <form method="POST"
-                                action="/listings/<%= listing.id %>/reviews/<%= review.id%>?_method=DELETE"
-                                class="mb-2 mt-2">
-                                <button class="btn btn-sm btn-dark">Delete</button>
-                            </form>
-                        </div>
-
-                        <% } %>
-                </div>
-
-            </div>
-
-
-
+      <form action="/listings/<%= listing.id %>?_method=DELETE" method="POST">
+        <button class="btn btn-dark offset-4">Delete</button>
+      </form>
+    </div>
+    <div class="col-8 offset-3 mb-3">
+      <hr />
+      <h4>Leave a review</h4>
+      <form
+        method="POST"
+        action="/listings/<%= listing.id %>/reviews"
+        novalidate
+        class="needs-validation"
+      >
+        <div class="mb-3 mt=3">
+          <lable for="Rating" class="form-lable">Rating</lable>
+          <input
+            type="range"
+            class="form-range"
+            min="1"
+            max="5"
+            id="rating"
+            name="review[rating]"
+          />
         </div>
-    </body>
+        <div class="mb-3 mt=3">
+          <lable for="comment" class="form-lable">Comments</lable>
+          <textarea
+            name="review[comment]"
+            class="form-control"
+            id="comment"
+            cols="30"
+            rows="5"
+            required
+          ></textarea>
+          <div class="invalid-feedback">Please add some comment for review</div>
+        </div>
+        <button class="btn btn-outline-dark">Submit</button>
+      </form>
+    </div>
+
+    <div class="col-8 offset-3 mb-3">
+      <hr />
+      <p>All Reviews</p>
+      <div class="row">
+        <% for ( review of listing.reviews) { %>
+        <div class="card col-5 ms-3 mb-3">
+          <div class="card-body">
+            <h5>ms</h5>
+            <p class="card-text"><%=review.comment %></p>
+            <p class="card-text"><%=review.rating%> starts</p>
+          </div>
+          <form
+            method="POST"
+            action="/listings/<%= listing.id %>/reviews/<%= review.id%>?_method=DELETE"
+            class="mb-2 mt-2"
+          >
+            <button class="btn btn-sm btn-dark">Delete</button>
+          </form>
+        </div>
+
+        <% } %>
+      </div>
+    </div>
+  </div>
+</body>
