--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
@@ -13,9 +12,9 @@
         <nav class="navbar">
           <div class="container-fluid">
             <form class="d-flex">
-              <input class="form-control me-2 search-inp" type="search" placeholder="Search destination"
+              <input class="form-control me-2" id="search-inp" type="search" placeholder="Search destination"
                 aria-label="Search">
-              <button class="btn search-btn" type="submit"> <i class="fa-solid fa-magnifying-glass"></i>Search
+              <button class="btn" id="search-btn" type="submit"> <i class="fa-solid fa-magnifying-glass"></i>Search
               </button>
             </form>
           </div>
